fix second flag position on IE11

--- a/src/app/modules/entry-webcast/views/mini-highlights/mini-highlights.component.scss
+++ b/src/app/modules/entry-webcast/views/mini-highlights/mini-highlights.component.scss
@@ -96,7 +96,8 @@
     .flag2 {
       z-index: 0;
       position: absolute;
-      margin-left: 12px;
+      top: 9px;
+      left: 12px;
     }
   }
 
